--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@smastrom/react-rating": "^1.5.0",
     "@types/react-redux": "^7.1.33",
     "antd": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-rating": "^2.0.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-simple-toasts": "^5.10.0"
